# bsccm-i2i

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: README.md
configs/data/: bsccm_full.yaml  bsccm_tiny.yaml
configs/experiment/: baseline_unet.yaml
configs/logging/: default.yaml
configs/model/: baseline_unet.yaml  unet_cnn.yaml
configs/split/: random.yaml  random_80_10_10.yaml  stratified.yaml  stratified_antibodies_80_10_10.yaml
configs/task/: eval.yaml  i2i_23to6.yaml  split.yaml  train.yaml
configs/trainer/: default.yaml  smoke.yaml
src/bsccm_i2i/: __init__.py  __main__.py  quiet.py
src/bsccm_i2i/callbacks/: __init__.py  system_info.py  viz_i2i.py
src/bsccm_i2i/cli/: __init__.py  main.py
src/bsccm_i2i/config/: __init__.py  loader.py  schema.py
src/bsccm_i2i/datamodules/: __init__.py  bsccm_datamodule.py
src/bsccm_i2i/datasets/: __init__.py  bsccm_dataset.py
src/bsccm_i2i/metrics/: __init__.py  collections.py  image_metrics.py
src/bsccm_i2i/models/: __init__.py  base_module.py  registry.py  unet_cnn.py
src/bsccm_i2i/runners/: __init__.py  artifacts.py  common.py  eval.py  paths.py  train.py
src/bsccm_i2i/splits/: __init__.py  builder.py  io.py  registry.py  strategies.py
src/bsccm_i2i/utils/: antibodies.py  quiet.py
tests/: config_builders.py  test_cli_story2.py  test_config_schema.py  test_metrics_cpu.py  test_unet_cnn_shapes.py
tests/callbacks/: test_viz_i2i.py
tests/cli/: test_eval_config.py  test_main.py  test_train_config.py  test_train_smoke.py
tests/datamodules/: __init__.py  test_bsccm_datamodule.py
tests/datasets/: __init__.py  test_bsccm_dataset_pickle.py
tests/runners/: test_artifacts.py  test_common.py  test_eval_runner.py  test_paths.py  test_train.py
tests/splits/: __init__.py  test_builder_registry.py  test_strategies.py
